common cache